<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fileImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            app:srcCompat="@drawable/file" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fileNameText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/name_example" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fileSizeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/black"
                    android:text="@string/file_size_example" />

                <TextView
                    android:id="@+id/fileDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/file_date_example" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_gravity="bottom">

    </FrameLayout>


</androidx.cardview.widget.CardView>